--- a/.travis.yml
+++ b/.travis.yml
@@ -27,12 +27,11 @@ before_install:
  - git clone https://github.com/BurntSushi/toml-test
 install:
  - pip install tox-travis
- - python setup.py install
+# - python setup.py install
  - chmod +x ./tests/*.sh
 script:
  - ~/go/bin/toml-test ./tests/decoding_test.sh
- - tox
+ - tox -e py
  - tox -e check
-after_success:
- - tox -e codecov
+
 
